Updated reset password mail content

--- a/src/mail/templates/reset-password.html
+++ b/src/mail/templates/reset-password.html
@@ -405,11 +405,11 @@
                 <tr>
                   <td class="content-block">
                     <span class="apple-link"
-                      >За питаннями звертайтесь до *** *** ******</span
+                      >За питаннями звертайтесь до
+                      <a href="https://t.me/suggestSRbot"
+                        >Telegram бота</a
+                      ></span
                     >
-                    <br />
-                    Детальніше на
-                    <a href="http:sckpi.vercel.app">офіційному сайті</a>.
                   </td>
                 </tr>
               </table>
